Bug 81751 - _mcd_connection_set_tp_connection() uses tp_asv_new incorrectly
Summary: _mcd_connection_set_tp_connection() uses tp_asv_new incorrectly
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: mission-control (show other bugs)
Version: git master
Hardware: All All
: medium minor
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-25 16:25 UTC by Steffen Kieß
Modified: 2014-08-25 12:14 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Steffen Kieß 2014-07-25 16:25:54 UTC
_mcd_connection_set_tp_connection() uses tp_asv_new incorrectly:

http://cgit.freedesktop.org/telepathy/telepathy-mission-control/tree/src/mcd-connection.c?id=190de711459a51eb236b773a57b0c188ebf1da6a#n2212

        GHashTable *details = tp_asv_new (
            "debug-message", inner_error->message,
            NULL);

this should be:

        GHashTable *details = tp_asv_new (
            "debug-message", G_TYPE_STRING, inner_error->message,
            NULL);
Comment 1 Guillaume Desmottes 2014-08-25 12:14:40 UTC
Thanks, fixed in the 5.16 branch.

commit ab29ae42f751bf7e4ecc9a601e09cafab499fd14
Author: Steffen Kieß <Steffen.Kiess@ipvs.uni-stuttgart.de>
Date:   Mon Aug 25 14:11:35 2014 +0200

    mcd-connection: use tp_asv_new() properly
    
    The second argument has to be the type of the value.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=81751


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.