mcd-connection: use tp_asv_new() properly

The second argument has to be the type of the value.

https://bugs.freedesktop.org/show_bug.cgi?id=81751